@startuml
abstract class Esquina  {
    # int coordenadaX;
    # int coordenadaY;
    # ArrayList Calle unasCalles
    + {abstract} setearCalleEnDireccion (Calle calle, Direccion unaDireccion) : void
    + {abstract} obtenerCalleEnDireccion (Direccion unaDireccion) :  Calle
}
class Inicio
{
    setearCalleEnDireccion (Calle calle, Direccion unaDireccion) : void
    obtenerCalleEnDireccion (Direccion unaDireccion) :  Calle
            }
class Meta{
    setearCalleEnDireccion (Calle calle, Direccion unaDireccion) : void
    obtenerCalleEnDireccion (Direccion unaDireccion) :  Calle
}
class EsquinaComun {
    setearCalleEnDireccion (Calle calle, Direccion unaDireccion) : void
    obtenerCalleEnDireccion (Direccion unaDireccion) :  Calle
}
Inicio --|> Esquina
Meta --|> Esquina
EsquinaComun --|> Esquina

@enduml